@@ -5,7 +5,8 @@ import com.bmuschko.gradle.docker.tasks.image.Dockerfile
 
 buildscript {
     ext {
-        springBootVersion = '2.2.0.RELEASE'
+        springBootVersion = '2.2.5.RELEASE'
+        springCloudVersion = "Hoxton.RELEASE"
     }
     repositories {
         mavenCentral()
@@ -13,17 +14,17 @@ buildscript {
     }
     dependencies {
         classpath group: 'org.springframework.boot', name: 'spring-boot-gradle-plugin', version: springBootVersion
-        classpath group: 'org.junit.platform', name: 'junit-platform-gradle-plugin', version:  '1.0.1'
-        classpath group: 'com.bmuschko', name: 'gradle-docker-plugin', version: '4.3.0'
+        classpath group: 'com.bmuschko', name: 'gradle-docker-plugin', version: '6.1.4'
+        classpath group: 'org.sonarsource.scanner.gradle', name: 'sonarqube-gradle-plugin', version: '2.8'
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'jacoco'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'org.junit.platform.gradle.plugin'
 apply plugin: 'application'
 apply plugin: 'com.bmuschko.docker-remote-api'
+apply plugin: 'org.sonarqube'
 
 sourceCompatibility = JavaVersion.VERSION_1_9
 targetCompatibility = JavaVersion.VERSION_1_9
@@ -49,11 +50,14 @@ repositories {
 dependencies {
     // Backend compile deps
 //    compile("org.springframework.boot:spring-boot-devtools:${springBootVersion}")
-    implementation platform (group: 'org.springframework.boot', name: 'spring-boot-dependencies', version: springBootVersion)
+    implementation platform(group: 'org.springframework.boot', name: 'spring-boot-dependencies', version: springBootVersion)
+    implementation platform(group: 'org.springframework.cloud', name: 'spring-cloud-dependencies', version: springCloudVersion)
+
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-    implementation group: 'org.springframework.boot' , name: 'spring-boot-starter-websocket'
-    implementation group: 'net.bull.javamelody', name: 'javamelody-spring-boot-starter', version: '1.78.0'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-context'
+    implementation group: 'net.bull.javamelody', name: 'javamelody-spring-boot-starter', version: '1.82.0'
 
     implementation group: 'org.springframework.integration', name: 'spring-integration-file'
     implementation group: 'org.springframework.integration', name: 'spring-integration-rmi'
@@ -84,15 +88,26 @@ dependencies {
     // JUnit family
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api'
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine'
-    testRuntimeOnly group: 'org.junit.vintage', name: 'junit-vintage-engine'
 }
 
-junitPlatform {
-    enableStandardTestTask = true
-}
 test {
     useJUnitPlatform()
-    jvmArgs(['--enable-preview'])
+    testLogging {
+        events "passed", "skipped", "failed"
+        exceptionFormat "full"
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "Toparvion_analog"
+    }
 }
 
 startScripts { enabled = false }        // to avoid build fails because of Gradle application plugin 
@@ -147,7 +162,7 @@ task createDockerfile(type: Dockerfile) {
     entryPoint 'java'
     // the command at whole will look like 'java -X... -jar analog.jar'
     defaultCommand '-Xmx256M', '-XX:MaxMetaspaceSize=256M', '-XX:+HeapDumpOnOutOfMemoryError', '--enable-preview',
-                   '-jar', "${bootJar.archiveFileName.get()}"
+            '-jar', "${bootJar.archiveFileName.get()}"
 }
 
 task syncImageFiles(type: Sync) {
@@ -171,7 +186,7 @@ task buildImage(type: DockerBuildImage) {
 
     dependsOn createDockerfile
     inputDir = createDockerfile.destFile.getAsFile().get().parentFile
-    tags = ["${project.name}:${project.version}"]
+//    tags = ["${project.name}:${project.version}"]
 }
 
 task dockerVersion(type: DockerVersion) {
